--- a/documentation/index.qmd
+++ b/documentation/index.qmd
@@ -6,6 +6,7 @@ listing:
     contents: 
       - "1_project_overview.qmd"
       - "2_data_process_1.qmd"
+      - "x_data_bq.qmd"
     type: table
     sort: false # keep original order
     filter-ui: false
